--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,2 +1,6 @@
 = image_tag @post.image.url(:medium)
 = @post.caption
+.text-center.edit-links
+  = link_to "Cancel", posts_path
+  |
+  = link_to "Edit Post", edit_post_path(@post)
