need to edit index view to link image to show view

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,5 @@
 %h1 Photogram
 = link_to "New Post", new_post_path
 -@posts.each do |post|
-  =image_tag post.image.url(:medium)
-  =post.caption
+  = link_to image_tag post.image.url(:medium)
+  = post.caption
