--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,10 @@
-= simple_form_for @post do |f|
-  = f.input :image
-  = f.input :caption
-  = f.button :submit
+.text-center
+  = image_tag @post.image.url(:medium)
+.form-wrapper
+  = simple_form_for @post, html: { class: 'form-horizontal', multipart: true } do |f|
+    .form-group
+      = f.input :image
+    .form-group.text-center
+      = f.input :caption
+    .form-group.text-center
+      = f.button :submit, class: 'btn-success'
